--- a/defense.qmd
+++ b/defense.qmd
@@ -278,7 +278,7 @@ $$ mig_{it} = \frac{ \sum_{j\ne i} out_{jit} y_{j,t-1} + y_{i,t-1} (pop_{i, t-1}
 ::: incremental
 -   $out_{jit}$ represents the number of movers from county $j$ to a destination county $i$ between year $t-1$ and year $t$
 
-    -   Source: IRS migration data: number of personal exemptions claimed
+    -   Source: IRS migration data: number of personal exemptions claimed on 1040
 
 -   $y_{j, t-1}$ is the lagged premature age-adjusted mortality rate of origin county $j$
 
@@ -311,11 +311,11 @@ Urbanicity as defined by the NCHS (same as Aim 1), grouped into urban and rural 
 
 Adjusted weighted average migration term for county $i$ in year $t$
 
-$d_{ij}$ accounts for health-related selection of movers to county $i$ from county $j$
-
 $$  amig_{it} = \frac{ \sum_{j\ne i} out_{jit} ( y_{j,t-1} + d_{ij}) + y_{i,t-1} (pop_{i, t-1} - \sum_{j\ne i} out_{ijt})}{ \sum_{j\ne i} out_{jit} + (pop_{i,t-1} - \sum_{j\ne i} out_{ijt})}$$
 
 ::: incremental
+-   $d_{ij}$ accounts for health-related selection of movers to county $i$ from county $j$
+
 -   When $d_{ij} > 0$ county $i$ tends to attract less healthy movers
 
 -   When $d_{ij} < 0$ county $i$ tends to attract healthier movers
@@ -391,7 +391,7 @@ Iterative process:
     -   $d_{ur}$ urban to rural
     -   Where each of $(d_{uu}, d_{rr}, d_{ru}, d_{ur})$ were varied factorially
         -   Coarse search: incrementing by 50 from -200 to 200
-        -   Then incrementing by 20 around a minimum found in the coarse search
+        -   Then incrementing by 20 from -100 to 100 around the minimum found in the coarse search
         -   We tested a total of 13,122 $(= 9^4 * 2)$ combinations of $(d_{uu}, d_{rr}, d_{ru}, d_{ur})$
     :::
 
@@ -460,6 +460,8 @@ migration patterns could lead to place-based health disparities in the long term
 
 -   Premature age-adjusted mortality rates serve as a proxy for overall county-level health
 
+-   $y_{it}$ and $mig_{it}$ are collinear
+
 -   IRS data
 
 -   Internal migration only
@@ -468,18 +470,22 @@ migration patterns could lead to place-based health disparities in the long term
 :::
 
 ::: notes
--   IRS data includes only approximately 45% of the total US population
+-   some estimates suggest that IRS data includes only approximately 55% of households in the US
 
 -   Known issues with the post 2011 data ; IRS took over data curation from census bureau in 2011 which meant that more tax returns could be included
 
--   sharp decline until 2014; sharp increase until 2016; volatility after 2016
+    -   sharp decline until 2014; sharp increase until 2016; volatility after 2016
 
--   sig statistical differences in county-to-county migration prob after 2011 compared to earlier periods
+    -   sig statistical differences in county-to-county migration prob after 2011 compared to earlier periods
+
+    -   almquist paper did robustness checks and found that this irregularity did not impact their findings
+
+    -   we added random effect for county and state which should account for some of this potential error ; we also used data from post methods change only
 :::
 
 ## Aim 3: Hypothesis
 
-Is a county's position within a migration system predictive of county-level health?
+**Exploratory:** Is a county's position within a migration system predictive of county-level health?
 
 ## Aim 3: Approach
 
@@ -517,37 +523,7 @@ $$ X \approx \sum_{r=1}^R o_{ir} \cdot d_{jr} \cdot t_{kr}, \quad \text{such tha
 
 Where each $rth$ component corresponds to a unique "migration system", and the loadings $(o_{ir}, d_{jr}, t_{kr})$ represent the significance of each origin county $i$, destination county $j$, and year $k$ to each migration system $r$.
 
-## Aim 3: Approach
-
-**Spatial modeling**
-
-$$ y_{it} = \beta_0 + \sum_{r=1}^{R} \beta_{o_r} o_{ir} + \sum_{r=1}^{R} \beta_{d_r} d_{jr} + \sum_{r=1}^{R} \beta_{t_r} t_{kr} + \sum_{n=2}^{6} \gamma_n \text{Urbanicity}_n + \mu_{it} $$
-
-::: incremental
--   Predictor variables: $o_{ir}, d_{jr}, t_{kr}$
-
-    -   Loadings from the tensor decomposition corresponding to origin, destination, and time
-
--   Outcome variable: $y_{it}$
-
-    -   Premature age-adjusted mortality rate per 100,000 population
-
--   Covariate: $Urbanicity_n$
-
-    -   Six categories (same as Aim 1): large central metro, large fringe metro, medium metro, small metro, micropolitan, noncore
-
--   Spatial error: $u_{it}$
-
-    -   Accounts for spatial correlation using Queen's contiguity
-:::
-
-::: notes
-the only piece of model "selection" we are doing is to choose the value of R! which we do using the elbow plot. otherwise this is an exploratory model
-:::
-
-## Aim 3: Results
-
-**Component Selection**
+## Aim 3: Component Selection 
 
 ![](images/aim3_elbow.png)
 
@@ -647,6 +623,32 @@ PURELY SPECULATIVE ; cannot form any conclusions based on this
 ALSO LIKELY DUE TO ESTABLISHED IRS DATA ISSUE: including steep decline 2011-2014 then sharp increases until 2016, volatility after [@dewaard2022]
 :::
 
+## Aim 3: Connection to county-level health 
+
+$$ y_{it} = \beta_0 + \sum_{r=1}^{3} \beta_{o_r} o_{ir} + \sum_{r=1}^{3} \beta_{d_r} d_{jr} + \sum_{r=1}^{3} \beta_{t_r} t_{kr} + \sum_{n=2}^{6} \gamma_n \text{Urbanicity}_n + \mu_{it} $$
+
+::: incremental
+-   Predictor variables: $o_{ir}, d_{jr}, t_{kr}$
+
+    -   Loadings from the tensor decomposition corresponding to origin, destination, and time
+
+-   Outcome variable: $y_{it}$
+
+    -   Premature age-adjusted mortality rate per 100,000 population
+
+-   Covariate: $Urbanicity_n$
+
+    -   Six categories (same as Aim 1): large central metro, large fringe metro, medium metro, small metro, micropolitan, noncore
+
+-   Spatial error: $u_{it}$
+
+    -   Accounts for spatial correlation using Queen's contiguity
+:::
+
+::: notes
+the only piece of model "selection" we are doing is to choose the value of R! which we do using the elbow plot. otherwise this is an exploratory model
+:::
+
 ## Aim 3: Results
 
 **Connection to county-level health**
@@ -666,7 +668,7 @@ $$ y_{it} = \beta_0 + \sum_{r=1}^{3} \beta_{o_r} o_{ir} + \sum_{r=1}^{3} \beta_{
 ## Aim 3: Pitfalls and Alternatives
 
 ::: incremental
--   Ambiguous - somewhat dependent upon individual perception
+-   Somewhat dependent upon individual perception
 
 -   Non-convex
 
@@ -680,7 +682,7 @@ $$ y_{it} = \beta_0 + \sum_{r=1}^{3} \beta_{o_r} o_{ir} + \sum_{r=1}^{3} \beta_{
 
     -   Non-representative
 
--   NARROWED GEOGRAPHICAL SCOPE
+-   Need to narrow geographical scope
 :::
 
 ::: notes
@@ -696,7 +698,13 @@ ensemble decomposition: aggregates results from multiple runs to provide a more 
 
 consensus clustering: consensus matrix is a square matrix where each entry represents the freq or proportion of times two data points are clustered together (ie part of the decomp??) across all runs ; ie if 2pts are in the same decomp 80% of the runs, the consensus matrix entry for those pts is 0.8
 
+almquist paper used IRS data and found that it was robust to the IRS temporality issues found by dewaard et al
+
+almquist paper used IRS data but only for metropolitan areas - much less sparse! but excluding the most interesting parts!!!
+
 ONLY IF ASKED: gini coeff as originally proposed in 2022 would allow us to compare across components ; but ranking allows us to ID counties that are the largest migration contributors but no insight into balance or spread of contributors
+
+ONLY IF ASKED: tensor contains 21950/77327048 = 0.0002838593 non zero entries YIKES
 :::
 
 ## Conclusions
